2010-09-01  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        DOM Selection: collapse() and selectAllChildren() should throw WRONG_DOCUMENT_ERR if node belongs to other document
        https://bugs.webkit.org/show_bug.cgi?id=44595

        Spec links:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-selection-collapse
        http://www.whatwg.org/specs/web-apps/current-work/#dom-selection-selectallchildren

        * fast/dom/Selection/script-tests/wrong-document-err.js: Added.
        * fast/dom/Selection/wrong-document-err-expected.txt: Added.
        * fast/dom/Selection/wrong-document-err.html: Added.

2010-09-02  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by Adam Barth.

        Support <script defer> as specified by HTML5
        https://bugs.webkit.org/show_bug.cgi?id=40934

        * fast/dom/HTMLScriptElement/defer-double-defer-write-expected.txt: Added.
        * fast/dom/HTMLScriptElement/defer-double-defer-write.html: Added. Tests that a write of a deferred script from a deferred script will execute when the document is closed. The explicit close is necessary because this is a script created parser.
        * fast/dom/HTMLScriptElement/defer-double-write-expected.txt: Added.
        * fast/dom/HTMLScriptElement/defer-double-write.html: Added. Tests that a script block written from a deferred script will write into the new document.
        * fast/dom/HTMLScriptElement/defer-inline-script-expected.txt: Added.
        * fast/dom/HTMLScriptElement/defer-inline-script.html: Added. Tests that inline scripts are not deferred. This is consistent with HTML5 and inconsistent with IE.
        * fast/dom/HTMLScriptElement/defer-onbeforeload-expected.txt: Added.
        * fast/dom/HTMLScriptElement/defer-onbeforeload.html: Added. Tests that the beforeload event is fired immediately and is cancellable.
        * fast/dom/HTMLScriptElement/defer-script-invalid-url-expected.txt: Added.